[package]
name = "hr"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "hr"
path = "src/lib.rs"

[[bin]]
name = "hr"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
bytes = "1"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
http-body-util = "0.1.3"
regex = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
url = "2"

[dev-dependencies]
tempfile = "3.27.0"
tower = { version = "0.5", features = ["util"] }
